--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js 18.x
+    - name: Use Node.js 20.17.0
       uses: actions/setup-node@v4
       with:
-        node-version: 18.x
+        node-version: 20.17.0
         cache: 'npm'
     - run: ./go.sh
