--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,12 +3,12 @@ updates:
 - package-ecosystem: "github-actions"
   directory: "/"
   schedule:
-    interval: "daily"
+    interval: "monthly"
 - package-ecosystem: "npm"
   directory: "/"
   schedule:
-    interval: "daily"
+    interval: "monthly"
 - package-ecosystem: "npm"
   directory: "/test-projects/vite-project/"
   schedule:
-    interval: "daily"
+    interval: "monthly"
