chore: apply zizmor and actionlint fixes

--- a/.github/workflows/codeql-analysis.yaml
+++ b/.github/workflows/codeql-analysis.yaml
@@ -9,6 +9,7 @@ on:
     - main
   schedule:
   - cron: '41 6 22 * *'
+permissions: {}
 
 jobs:
   debug:
@@ -55,7 +56,9 @@ jobs:
         - javascript-typescript
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4.1.1
+      uses: actions/checkout@v4.2.2
+      with:
+        persist-credentials: false
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
