--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,11 +5,14 @@ on:
     - "*"
   pull_request:
     branches: ["main"]
+permissions: {}
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
     - name: Use Node.js 20.17.0
       uses: actions/setup-node@v4
       with:
