--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "./dist/vitest-link-reproduction.js",
   "dependencies": {
-    "@mui/base": "^5.0.0-beta.70"
+    "@base-ui-components/react": "^1.0.0-beta.2"
   },
   "peerDependencies": {
     "react": "^19.1.1",
