--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,9 +13,9 @@ jobs:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       with:
         persist-credentials: false
-    - name: Use Node.js 20.19.3
+    - name: Setup Node.js
       uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
       with:
-        node-version: 20.19.3
+        node-version-file: '.node-version'
         cache: 'npm'
     - run: ./go.sh
