--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,11 +4,17 @@ updates:
   directory: "/"
   schedule:
     interval: "monthly"
+  cooldown:
+    default-days: 4
 - package-ecosystem: "npm"
   directory: "/"
   schedule:
     interval: "monthly"
+  cooldown:
+    default-days: 4
 - package-ecosystem: "npm"
   directory: "/test-projects/vite-project/"
   schedule:
     interval: "monthly"
+  cooldown:
+    default-days: 4
