--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,8 @@ on:
     branches:
     - "*"
   pull_request:
-    branches: ["main"]
+    branches:
+    - main
 permissions: {}
 jobs:
   build:
@@ -16,6 +17,6 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
       with:
-        node-version-file: '.node-version'
-        cache: 'npm'
+        cache: npm
+        node-version-file: .node-version
     - run: ./go.sh
